syntax = "proto3";
package ignitehelloworld.ignitehelloworld;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "ignitehelloworld/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "ignite-hello-world/x/ignitehelloworld/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/ignite-hello-world/ignitehelloworld/params";
  }
  // Queries a list of HelloWorld items.
	rpc HelloWorld(QueryHelloWorldRequest) returns (QueryHelloWorldResponse) {
		option (google.api.http).get = "/ignite-hello-world/ignitehelloworld/hello_world";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryHelloWorldRequest {
}

message QueryHelloWorldResponse {
  string message = 1;
}

// this line is used by starport scaffolding # 3
